Добавлены фильтры на главной

--- a/src/components/Beer/Beer.scss
+++ b/src/components/Beer/Beer.scss
@@ -16,11 +16,16 @@
 
   &__description {
     overflow: hidden;
-    text-align: justify;
+    // text-align: justify;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     // white-space: nowrap;
+  }
+
+  &__style {
+    margin-bottom: 12px;
+    font-weight: 700;
   }
 }
